; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/mips/pci/extr_pci-bcm63xx.c_bcm63xx_int_cfg_readl.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/mips/pci/extr_pci-bcm63xx.c_bcm63xx_int_cfg_readl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MPI_PCICFGCTL_CFGADDR_MASK = common dso_local global i32 0, align 4
@MPI_PCICFGCTL_WRITEEN_MASK = common dso_local global i32 0, align 4
@MPI_PCICFGCTL_REG = common dso_local global i32 0, align 4
@MPI_PCICFGDATA_REG = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @bcm63xx_int_cfg_readl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bcm63xx_int_cfg_readl(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = load i32, i32* @MPI_PCICFGCTL_CFGADDR_MASK, align 4
  %6 = and i32 %4, %5
  store i32 %6, i32* %3, align 4
  %7 = load i32, i32* @MPI_PCICFGCTL_WRITEEN_MASK, align 4
  %8 = load i32, i32* %3, align 4
  %9 = or i32 %8, %7
  store i32 %9, i32* %3, align 4
  %10 = load i32, i32* %3, align 4
  %11 = load i32, i32* @MPI_PCICFGCTL_REG, align 4
  %12 = call i32 @bcm_mpi_writel(i32 %10, i32 %11)
  %13 = call i32 (...) @iob()
  %14 = load i32, i32* @MPI_PCICFGDATA_REG, align 4
  %15 = call i32 @bcm_mpi_readl(i32 %14)
  ret i32 %15
}

declare dso_local i32 @bcm_mpi_writel(i32, i32) #1

declare dso_local i32 @iob(...) #1

declare dso_local i32 @bcm_mpi_readl(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
